# stereoCalibration

./: CMakeLists.txt
config/: cam_config.json  intrinsic_parameters.yml
forms/: calibration.ui
include/: calibration_window.hpp  ui_calibration.hpp
src/: calibration_window.cpp  main.cpp
